--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".PelangganAdapter"></activity>
+        <activity android:name=".PelangganActivity" />
+        <activity android:name=".EditPelangganActivity" />
+        <activity android:name=".KaryawanActivity" />
+        <activity android:name=".EditKaryawanActivity" />
+        <activity android:name=".SepatuActivity" />
+        <activity android:name=".EditSepatuActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
